--- a/ProjectProposal.ipynb
+++ b/ProjectProposal.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "This will be slightly different from a classic GAN setup, in which a discriminator determines classification of a \"true\" and \"fake\" distribution. With the a classic GAN (generative-discriminative) approach, we would likely end up merely modeling the chosen PRNG algorithm, while in our proposed approach, we would be improving upon the chosen PRNG--giving us the ability to track the cryptographic rigidity between the original PRNG alone and our modified PRNG (which is essentially enhanced through data from a prediction attack).\n",
     "\n",
-    "![Modded GAN.png](ModdedGAN.png)\n",
+    "![Modded GAN.png](https://github.com/CSCI4850/S20-team7-project/blob/master/ModdedGAN.png)\n",
     "\n",
     "We hope to do this process above with several PRNGs, starting with one of the oldest in 1946 and gradually making our way to newer methods of PRN generation.\n",
     "\n",
