update proposal materials

--- a/Project Proposal/ProjectProposal.ipynb
+++ b/Project Proposal/ProjectProposal.ipynb
@@ -11,9 +11,7 @@
     "Matthew Hawks <br/>\n",
     "Jacob Anderson <br/>\n",
     "Tae Kweon <br/>\n",
-    "Ali Najib <br/>\n",
-    "\n",
-    "Note: The design of the GAN is subject to change."
+    "Ali Najib <br/>\n"
    ]
   },
   {
@@ -25,25 +23,28 @@
     "    \n",
     "| Acronyms | Definition                      |\n",
     "|----------|:-------------------------------:|\n",
-    "| GAN      | Generative Adversarial Network  |\n",
     "| PRN      | Pseudo random number            |\n",
     "| PRNG     | Pseudo random number generator  |\n",
     "\n",
-    
-  
+    "</div>\n",
+    "</br>\n",
+    "</br>\n",
+    "</br>\n",
+    "</br>\n",
+    "</br>\n",
+    "</br>\n",
+    "</br>\n",
+    "\n",
     "### Our Aim\n",
-    "* To ***improve*** upon different methods of PRN generation using a modified GAN architecture, and in doing so,\n",
-    "compare the \"cryptographic robustness\" of each method.</br>\n",
+    "* To train a neural net to predict PRNs from a chosen PRNGs output. We aim to train new neural networks on additional methods of PRN generation, if we have enough time.</br>\n",
     "* Our secondary aim is to continue the quest [[1]](https://arxiv.org/ftp/arxiv/papers/1801/1801.01117.pdf)[[2]](https://arxiv.org/pdf/1810.00378.pdf) for insights on pseudo randomness.\n",
     "\n",
     "### The Meat\n",
-    "Our proposal is to create a modified GAN, in which the generative network trains on a specific PRNG's output to be able to produce statistically similar data (n bits). The predictive network will then train on n-1 of the bits to predict the nth bit. The backpropagation will flow through the predictive network in addition to the generative network to acheive the adversarial nature of a traditional GAN setup, as described so eloquently below.\n",
+    "Our proposal is to create predictive networks that are fed outputs of PRNGs, which will attempt to predict an nth value, based on previous n-1 values in a particular set of input data. After being trained on, ideally thousands of sets, the predictive network will form a better stochastic \"understanding\" of how the PRNG works underneath, thus being able to more accurately predict numbers generated from that PRNG in the future. The backpropagation will flow through the predictive network to acheive the adversarial nature of a traditional GAN setup, but in reality, we won't be using a generative net, just a PRNG algorithm, so the generative part of our setup won't be defensive. There is an eloquent description of what our predictor network will do below.\n",
     "\n",
-    "> The predictor maximizes [gradient ascent] the probability of correctly predicting the nth value from the other [n-1] values, while the generator minimizes it [gradient descent]. Thus the pseudo-randomness of the generator’s output is formulated as unpredictability by an improving opponent. [reference](https://arxiv.org/pdf/1810.00378.pdf)\n",
+    "> The predictor network maximizes [gradient ascent] the probability of correctly predicting the nth value from the other [n-1] values.[ref](https://arxiv.org/pdf/1810.00378.pdf)\n",
     "\n",
-    "This will be slightly different from a classic GAN setup, in which a discriminator determines classification of a \"true\" and \"fake\" distribution. With the a classic GAN (generative-discriminative) approach, we would likely end up merely modeling the chosen PRNG algorithm, while in our proposed approach, we would be improving upon the chosen PRNG--giving us the ability to track the cryptographic rigidity between the original PRNG alone and our modified PRNG (which is essentially enhanced through data from a prediction attack).\n",
-    "\n",
-    "[HERE IS OUR PROPOSED GAN MODEL DIAGRAM](https://github.com/CSCI4850/S20-team7-project/blob/master/ModdedGAN.png)\n",
+    "![Modded GAN.png](ModdedGAN.png)\n",
     "\n",
     "We hope to do this process above with several PRNGs, starting with one of the oldest in 1946 and gradually making our way to newer methods of PRN generation.\n",
     "\n",
@@ -56,20 +57,18 @@
     "[Maximally periodic reciprocals (1992)](https://en.wikipedia.org/wiki/Sophie_Germain_prime)<br/>\n",
     "[Mersenne Twister (1998)](https://en.wikipedia.org/wiki/Mersenne_Twister)<br/>\n",
     "\n",
-    "More succinctly put, we will train the generative network with outputs of the chosen PRNG method, so once our generative network is sufficiently modeling the PRNG, it can appropriately improve the method of PRN generation based on predictions from the predictive network.\n",
-    "\n",
-    "Theoretically, we will be able to look at the data and stochastically rank each PRNG on how much the generative network had to change the weights to be more effective, this should also tell us how \"good\" each PRNG is at generating \"random\" numbers.\n",
-    "The only stipulation on the latter is that the weights in the generative network should only change if the predictive network successfully predicts the generated value.\n",
+    "Theoretically, we will be able to look at the data and stochastically rank each PRNG on how easy a prediction attack worked on it. This should also tell us how \"good\" each PRNG is at generating \"random\" numbers.\n",
     "\n",
     "#### *Our hypothesis comes in two parts:*\n",
     "1) We predict there will be a positive trend over time on the cryptographic strength of each subsequent PRNG, given the nature of the increasing importance of stronger PRNGs.\n",
     "\n",
     "2) We also predict that as we get into cryptographically stronger generation methods, our prediction success rates (even with learning) will be less effective.\n",
     "\n",
-    "\n",
     "### Practical Application\n",
     "\n",
     "A GAN method similar to this could be used in the future during a real-time prediction attack scenario. If attackers are somehow able to break a strong PRNG that is used to generate numbers for cryptographic methods, a method like this could be used as a defense mechanism to prevent (or slow down) further PRN generation cycles from being compromised.\n",
+    "\n",
+    "Of course, determining any correlation in pseudo random sequences would be a great help to the community to write stronger generators\n",
     "\n"
    ]
   }
