--- a/Project Proposal/ProjectProposal.ipynb
+++ b/Project Proposal/ProjectProposal.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "> The predictor network maximizes [gradient ascent] the probability of correctly predicting the nth value from the other [n-1] values.[ref](https://arxiv.org/pdf/1810.00378.pdf)\n",
     "\n",
-    "![Modded GAN.png](https://github.com/CSCI4850/S20-team7-project/blob/master/Project%20Proposal/ModelDiagram.png)\n",
+    "[Modded GAN.png](https://github.com/CSCI4850/S20-team7-project/blob/master/Project%20Proposal/ModelDiagram.png)\n",
     "\n",
     "We hope to do this process above with several PRNGs, starting with one of the oldest in 1946 and gradually making our way to newer methods of PRN generation.\n",
     "\n",
