--- a/Project Proposal/ProjectProposal.ipynb
+++ b/Project Proposal/ProjectProposal.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "\n",
     "### Our Aim\n",
-    "* To train a neural net to predict PRNs from a chosen PRNGs output. We aim to train new neural networks on additional methods of PRN generation, if we have enough time.</br>\n",
+    "* To train a neural net to predict PRNs from a chosen PRNGs output. We aim to train new neural networks on additional methods of PRN generation, if we have enough time.\n",
     "* Our secondary aim is to continue the quest [[1]](https://arxiv.org/ftp/arxiv/papers/1801/1801.01117.pdf)[[2]](https://arxiv.org/pdf/1810.00378.pdf) for insights on pseudo randomness.\n",
     "\n",
     "### The Meat\n",
@@ -36,7 +36,7 @@
     "\n",
     "> The predictor network maximizes [gradient ascent] the probability of correctly predicting the nth value from the other [n-1] values.[ref](https://arxiv.org/pdf/1810.00378.pdf)\n",
     "\n",
-    "[](https://github.com/CSCI4850/S20-team7-project/blob/master/Project%20Proposal/ModelDiagram.png)\n",
+    "![HERE IS OUR DESIGN DIAGRAM](https://github.com/CSCI4850/S20-team7-project/blob/master/Project%20Proposal/ModelDiagram.png)\n",
     "\n",
     "We hope to do this process above with several PRNGs, starting with one of the oldest in 1946 and gradually making our way to newer methods of PRN generation.\n",
     "\n",
