--- a/WorkSpace/ProjectCore/ProjectCore.ipynb
+++ b/WorkSpace/ProjectCore/ProjectCore.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "#Basic imports for now\n",
     "\n",
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
