--- a/WorkSpace/Milestones/Project Milestones.ipynb
+++ b/WorkSpace/Milestones/Project Milestones.ipynb
@@ -30,7 +30,7 @@
     "    \n",
     "| Deliverable | Percent Complete | Percent Complete By Next Milestone | Estimated Completion Date   | \n",
     "|-------------|:-----:|:------------------------------------------|-------------------------|\n",
-    "| Code        |  10%  | 40% | Apr 14 |\n",
+    "| Code        |  15%  | 40% | Apr 14 |\n",
     "| Paper       |  0%   | 10% | Apr 22 |\n",
     "| Demo        |  0%   | 0%  | May 1  |\n",
     "| Presentation|  0%   | 0%  | May 5  |"
@@ -40,16 +40,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. What deliverable goals established in the last milestone report were accomplished to the anticipated percentage?\n",
+    "### **1. What deliverable goals established in the last milestone report were accomplished to the anticipated percentage?**\n",
     "\n",
-    "2. What deliverable goals established in the last milestone report were were not accomplished to the anticipatedpercentage?\n",
+    "   At the beginning of this project, we established some preliminary goals to get kickstarted. Some of these goals are inferred.\n",
+    "  \n",
+    "   Those goals were:\n",
+    "    \n",
+    "   - [X] Get group member communication channels flowing.\n",
+    "   - [X] Finish project proposal.\n",
+    "   - [X] Amend the project proposal and discuss said amendments.\n",
+    "   - [X] Get repo set up with initial files/Workspace. \n",
+    "   - [X] Implement some of the PRNG code / ProjectCore code.\n",
+    "   - [X] Discuss architecture group assignments in depth\n",
+    "   - [X] Create Tasks and divide into those tasks for the meat of the project developement.\n",
+    "   \n",
+    "We were able to accomplish all of these low-level initial goals to 100% completion.\n",
     "\n",
-    "3. What are the main deliverable goals to meet before the next milestone report, and who is working on them?\n",
+    "\n",
+    "### **2. What deliverable goals established in the last milestone report were were not accomplished to the anticipated percentage?**\n",
+    "\n",
+    "None\n",
+    "\n",
+    "### **3. What are the main deliverable goals to meet before the next milestone report, and who is working on them?**\n",
+    "\n",
+    "   Goals for next milestone:\n",
+    "   \n",
+    "  - [ ] Task 1: Creating PRNG implementations. **[Expecting > 50% completion by next milestone]**\n",
+    "    * Najib Ali\n",
+    "    * Jacob Anderson\n",
+    "  - [ ] Task 2: Setting up predictive network / core program flow. **[Expecting > 50% completion by next milestone]**\n",
+    "    * Ryan Hines\n",
+    "    * Tae Kweon\n",
+    "  - [ ] Task 3: Figuring out a method of logging (aggregate data to later use in our research paper as we start our trials) **[Expecting > 50% completion by next milestone]**\n",
+    "    * Matthew Hawks\n",
+    "  - [ ] Task 4: Designing the experiment. **[Expecting > 50% completion by next milestone]**\n",
+    "    * Spencer Arnold\n",
+    "   \n",
+    "   \n",
+    "  **NOTE: It has been discussed among this team that there will be pretty heavy coordination between tasks. Different people are also assisting with other tasks, including the their individual role to balance the load in tasks that are more rigorous.**\n",
+    " \n",
+    " \n",
+    "We have abstracted a lot of the details associated with each of these tasks (for the sake of being concise as per the rubric). These details are actively being discussed in the slack and among smaller chats. \n",
     "\n",
     "## Rubric\n",
-    "1. Does your report have the necessary table, filled with the correct information? (4 points)\n",
-    "2. Does your report answer the questions above clearly and concisely? (4 points)\n",
-    "3. Does each team member have a role to play in helping to meet the goals of the next milestone? (4 points)"
+    "- [X] Does your report have the necessary table, filled with the correct information? (4 points)\n",
+    "- [X] Does your report answer the questions above clearly and concisely? (4 points)\n",
+    "- [X] Does each team member have a role to play in helping to meet the goals of the next milestone? (4 points)"
    ]
   },
   {
