Finished Middle_Square Implementation in coordination with Najib Ali

--- a/WorkSpace/ProjectCore/ProjectCore.ipynb
+++ b/WorkSpace/ProjectCore/ProjectCore.ipynb
@@ -51,73 +51,134 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#1: 5227\n",
-      "#2: 3215\n",
-      "#3: 3362\n",
-      "#4: 3030\n",
-      "#5: 1809\n",
-      "#6: 2724\n",
-      "#7: 4201\n",
-      "#8: 6484\n",
-      "#9: 422\n",
-      "#10: 1780\n",
-      "#11: 1684\n",
-      "#12: 8358\n",
-      "#13: 8561\n",
-      "#14: 2907\n",
-      "#15: 4506\n",
-      "#16: 3040\n",
-      "#17: 2416\n",
-      "#18: 8370\n",
-      "#19: 569\n",
-      "#20: 3237\n",
-      "#21: 4781\n",
-      "#22: 8579\n",
-      "#23: 5992\n",
-      "#24: 9040\n",
-      "#25: 7216\n",
-      "#26: 706\n",
-      "#27: 4984\n",
-      "#28: 8402\n",
-      "#29: 5936\n",
-      "#30: 2360\n",
-      "#31: 5696\n",
-      "#32: 4444\n",
-      "#33: 7491\n",
-      "#34: 1150\n",
-      "#35: 3225\n",
-      "#36: 4006\n",
-      "#37: 480\n",
-      "#38: 2304\n",
-      "#39: 3084\n",
-      "#40: 5110\n",
-      "#41: 1121\n",
-      "#42: 2566\n",
-      "#43: 5843\n",
-      "#44: 1406\n",
-      "#45: 9768\n",
-      "#46: 4138\n",
-      "#47: 1230\n",
-      "#48: 5129\n",
-      "#49: 3066\n",
-      "#50: 4003\n",
-      "#51: 240\n",
-      "#52: 576\n",
-      "#53: 3317\n",
-      "#54: 24\n",
-      "#55: 5\n",
-      "#56: 0\n",
-      "#57: 0\n",
-      "We began with 1234, and have repeated ourselves after 57 steps with 0.\n"
+      "Middle_Square\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['326317487346352596242',\n",
+       " '480369867631902886315',\n",
+       " '286919003114065979432',\n",
+       " '479694032027069402557',\n",
+       " '623870857135296322027',\n",
+       " '827293137621700290320',\n",
+       " '559575362917983186639',\n",
+       " '847925927895571075878',\n",
+       " '975651992185285297612',\n",
+       " '551160034412519277191',\n",
+       " '336094338546661230421',\n",
+       " '031177329960614134414',\n",
+       " '034730077441305156479',\n",
+       " '790790533247756789009',\n",
+       " '742715355309747300940',\n",
+       " '128841782518312578396',\n",
+       " '224961567357586122675',\n",
+       " '879817581167122985797',\n",
+       " '307670432147578864957',\n",
+       " '178779302925592242299',\n",
+       " '545606748863811896000',\n",
+       " '057387036667194076711',\n",
+       " '774418774435497731902',\n",
+       " '981783154283133307877',\n",
+       " '341387401000326781453',\n",
+       " '617579191418694540921',\n",
+       " '733685528915202684190',\n",
+       " '395807139915107577885',\n",
+       " '077775463971849211325',\n",
+       " '960364146984643265030',\n",
+       " '135414936398975881289',\n",
+       " '999386830197688188583',\n",
+       " '725828442718937436852',\n",
+       " '597978438883921272753',\n",
+       " '700515687729386160532',\n",
+       " '549748641987367021436',\n",
+       " '669542383802113719713',\n",
+       " '074169523106586115098',\n",
+       " '578584116418441164396',\n",
+       " '717082785752336759330',\n",
+       " '223317028424728675391',\n",
+       " '844510751697841635953',\n",
+       " '332535296024562102755',\n",
+       " '021431482206359778517',\n",
+       " '295615158002065025775',\n",
+       " '405858698415056592314',\n",
+       " '791638604780256691673',\n",
+       " '784314529241447938844',\n",
+       " '792340939232024361240',\n",
+       " '830865215653889129288',\n",
+       " '835836894116448272410',\n",
+       " '662307606592407892272',\n",
+       " '501637421632955524901',\n",
+       " '825595956387105371447',\n",
+       " '027391945748927052671',\n",
+       " '919121628324440004124',\n",
+       " '537700336628165040199',\n",
+       " '100420027515029314562',\n",
+       " '261192446134702612062',\n",
+       " '178295254722705610003',\n",
+       " '566344771277230502538',\n",
+       " '530585320250538091334',\n",
+       " '653660667880485689692',\n",
+       " '339626161913105388803',\n",
+       " '558268774089120016270',\n",
+       " '229689204517682832599',\n",
+       " '719659317562546375597',\n",
+       " '545899702023833991953',\n",
+       " '697107422097942551844',\n",
+       " '440390436497371157977',\n",
+       " '583450984780098847313',\n",
+       " '408671367726254235630',\n",
+       " '992473120563496271905',\n",
+       " '410442064893754356508',\n",
+       " '342488623870675548010',\n",
+       " '808290687935064903625',\n",
+       " '025404765556264547412',\n",
+       " '129687655190966830674',\n",
+       " '089311059422545893576',\n",
+       " '351775236412927461459',\n",
+       " '533710065817503470749',\n",
+       " '549238866906607020566',\n",
+       " '208535805885533260515',\n",
+       " '363288084557096346283',\n",
+       " '811639847994595225858',\n",
+       " '526896438738547907515',\n",
+       " '553643680694668748347',\n",
+       " '731403249142186638499',\n",
+       " '557475397453312066696',\n",
+       " '657282578979779864361',\n",
+       " '303105551993453879232',\n",
+       " '492563729023562438251',\n",
+       " '495974458990447844543',\n",
+       " '708674307299522981478',\n",
+       " '264587317487049879254',\n",
+       " '749929308311972279173',\n",
+       " '652731749681081075403',\n",
+       " '417254845810735709661',\n",
+       " '525408313984235060095',\n",
+       " '037565350086537929902']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# As we get to each PRNG example, we can import like this\n",
     "from PRNGs import *\n",
+    "from SeedGenerator import *\n",
     "\n",
-    "midsquare(1234, 10)"
+    "t = ticks()\n",
+    "Middle_Square(t, 100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
