Added closing remarks on proposal and pointed to upstream sources.

--- a/WorkSpace/Project Proposal/ProjectProposal.ipynb
+++ b/WorkSpace/Project Proposal/ProjectProposal.ipynb
@@ -81,12 +81,14 @@
     "__________________________________________\n",
     "\n",
     "Feedback 1:\n",
-    "   > The length of the set of n-values we will feed into the predictive network needs to be of concrete statistical relevance. (i.e., what is the correct choice of n and how do we     statistically prove this?).\n",
+    "   > The length of the set of n-values we will feed into the predictive network needs to be of concrete statistical relevance. (i.e., what is the correct choice of n and how do we statistically prove this?).\n",
     "   \n",
     "Amendment 1:\n",
-    "   > Needs more discussion\n",
+    "   > We are discussing the possibility of using the sample size calucations https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3775042/\n",
     "__________________________________________\n",
+    "\n",
     "Feedback 2:\n",
+    "\n",
     "   > What network architectures will be employed? Having a couple of different architectures and listing the applicative advantages/disadvantages will convince everyone we didn't blindly choose a single architecture.\n",
     "   \n",
     "Amendment 2:\n",
@@ -101,8 +103,18 @@
     "   \n",
     "Amendment 3:\n",
     "   > Adding additional hypothesis around our results with different n-length sets, as well as boundaries for acceptable accuracy.... 95%?\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "## NOTE: This project proposal is now downstream. See project milestones, experimental design, and the final research paper for incremental or full scoped updates.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
