--- a/WorkSpace/ProjectCore/ProjectCore.ipynb
+++ b/WorkSpace/ProjectCore/ProjectCore.ipynb
@@ -177,7 +177,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#initially using fewer kernels and increasing gradually while monitoring the error rate on how it is varying\n",
+    "model = keras.Sequential()\n",
+    "model.add(keras.layers.Conv1D(64, kernel_size=(3, 3),\n",
+    "activation='relu',\n",
+    "input_shape=()) \n",
+    "        \n",
+    "    #data work in progress\n",
+    "          \n",
+    "model.add(keras.layers.Conv1D(64, (3, 3), activation='relu'))\n",
+    "model.add(keras.layers.Conv1D(64, (3, 3), activation='relu'))\n",
+    "model.add(keras.layers.Conv1D(64, (3, 3), activation='relu'))\n",
+    "\n",
+    "#test pool size and monitor what works better\n",
+    "\n",
+    "model.add(keras.layers.MaxPooling1D(pool_size=(2, 2)))\n",
+    "model.add(keras.layers.Dropout(0.25))\n",
+    "model.add(keras.layers.Flatten())\n",
+    "model.add(keras.layers.Dense(128, activation='relu'))\n",
+    "model.add(keras.layers.Dropout(0.5))\n",
+    "          \n",
+    "          \n",
+    "model.add(keras.layers.Dense(, activation='softmax'))\n",
+    "          \n",
+    "    #data work in progress\n",
+    "          \n",
+    "model.compile(loss=keras.losses.categorical_crossentropy,\n",
+    "optimizer=keras.optimizers.Adam(),\n",
+    "metrics=['accuracy'])\n",
+    "model.summary()"
+   ]
   },
   {
    "cell_type": "code",
