mid_square tests and updated milestones

--- a/WorkSpace/Milestones/Project Milestones.ipynb
+++ b/WorkSpace/Milestones/Project Milestones.ipynb
@@ -99,6 +99,128 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Milestone 2 - Team 7 \n",
+    "### Due March 31th 2020\n",
+    "Spencer Arnold <br/>\n",
+    "Ryan Hines <br/>\n",
+    "Matthew Hawks <br/>\n",
+    "Jacob Anderson <br/>\n",
+    "Tae Kweon <br/>\n",
+    "Ali Najib <br/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deliverable Tracking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"display: block; float:left;\"/>\n",
+    "    <h3>Progress and Projections</h3>\n",
+    "    \n",
+    "| Deliverable | Percent Complete | Percent Complete By Next Milestone | Estimated Completion Date   | \n",
+    "|-------------|:-----:|:------------------------------------------|-------------------------|\n",
+    "| Code        |  45%  | 85% | Apr 14 |\n",
+    "| Paper       |  10%   | 65% | Apr 22 |\n",
+    "| Demo        |  0%   | >35%  | May 1  |\n",
+    "| Presentation|  0%   | >35%  | May 5  |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **1. What deliverable goals established in the last milestone report were accomplished to the anticipated percentage?**\n",
+    "\n",
+    "   In the last milestone, we established some goals.\n",
+    "  \n",
+    "   Those goals were:\n",
+    "    \n",
+    "   - [>50%] Task 1: Creating PRNG implementations.\n",
+    "     * Najib Ali\n",
+    "     * Jacob Anderson\n",
+    "   - [>50%] Task 2: Setting up predictive network / core program flow.\n",
+    "     * Ryan Hines\n",
+    "     * Tae Kweon\n",
+    "   - [>50%] Task 3: Figuring out a method of logging (aggregate data to later use in our research paper as we start our trials)\n",
+    "     * Matthew Hawks\n",
+    "   - [>50%] Task 4: Designing the experiment.\n",
+    "     * Spencer Arnold\n",
+    "  \n",
+    "  \n",
+    "   Actual completion percentage:\n",
+    "  \n",
+    "   - [45%] Task 1: Creating PRNG implementations.\n",
+    "     * Najib Ali\n",
+    "     * Jacob Anderson\n",
+    "   - [55%] Task 2: Setting up predictive network / core program flow.\n",
+    "     * Ryan Hines\n",
+    "     * Tae Kweon\n",
+    "   - [45%] Task 3: Figuring out a method of logging (aggregate data to later use in our research paper as we start our trials)\n",
+    "     * Matthew Hawks\n",
+    "   - [40%] Task 4: Designing the experiment.\n",
+    "     * Spencer Arnold\n",
+    "   \n",
+    "   \n",
+    "Our goal was to get at least 50% in each task category.\n",
+    "\n",
+    "For task 1, we have 3/8 generators complete, plus a few percentage points with the seed generator and function header standards, so that's 37% plus a few.\n",
+    "\n",
+    "For task 2, we have over half of the predictive net code built, but just need to discuss and tweak some things once we get closer to stringing everything together (plugging into data inputs and logging).\n",
+    "\n",
+    "For task 3, we have made a lot of conceptual progress in discussions, just need to implement the code.\n",
+    "\n",
+    "For task 4, we have a large base of the experimental design written in terms of covering our tracks with detailed reasons on \"how\"/\"why\" we have things set up the way we do, just need to write out the experimental execution part.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### **2. What deliverable goals established in the last milestone report were were not accomplished to the anticipated percentage?**\n",
+    "\n",
+    "We did not accomplish our percentage goals for 3/4 of the tasks; however, we fell short only in the 5-10% interval range.\n",
+    "\n",
+    "### **3. What are the main deliverable goals to meet before the next milestone report, and who is working on them?**\n",
+    "\n",
+    "   Goals for next milestone:\n",
+    "   \n",
+    "  - [100%] Task 1: Creating PRNG implementations.\n",
+    "    * Najib Ali\n",
+    "    * Jacob Anderson\n",
+    "  - [90%] Task 2: Setting up predictive network / core program flow.\n",
+    "    * Ryan Hines\n",
+    "    * Tae Kweon\n",
+    "  - [90%] Task 3: Figuring out a method of logging (aggregate data to later use in our research paper as we start our trials)\n",
+    "    * Matthew Hawks\n",
+    "  - [85%] Task 4: Designing the experiment.\n",
+    "    * Spencer Arnold\n",
+    "   \n",
+    "   \n",
+    "  **NOTE: It has been discussed among this team that there will be pretty heavy coordination between tasks. Different people are also assisting with other tasks, including the their individual role to balance the load in tasks that are more rigorous.**\n",
+    " \n",
+    " \n",
+    "We have abstracted a lot of the details associated with each of these tasks (for the sake of being concise as per the rubric). These details are actively being discussed in the slack and among smaller chats.\n",
+    "\n",
+    "## Rubric\n",
+    "- [X] Does your report have the necessary table, filled with the correct information? (4 points)\n",
+    "- [X] Does your report answer the questions above clearly and concisely? (4 points)\n",
+    "- [X] Does each team member have a role to play in helping to meet the goals of the next milestone? (4 points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
