finished Mersenne Twister

--- a/WorkSpace/ProjectCore/ProjectCore.ipynb
+++ b/WorkSpace/ProjectCore/ProjectCore.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Basic imports for now\n",
     "\n",
@@ -44,15 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.372157883212303e+17\n",
-      "--- 9.870529174804688e-05 seconds ---\n"
+      "6.3721635401447e+17\n",
+      "--- 8.630752563476562e-05 seconds ---\n",
+      "asdf\n"
      ]
     }
    ],
@@ -66,11 +59,11 @@
     "\n",
     "print(t)\n",
     "start_time = time.time()\n",
-    "#here\n",
+    "#ls = Mersenne_Twister(429496796,10000)\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
     "\n",
     "#print(str(ls))\n",
-    "#print(\"asdf\")\n"
+    "print(\"asdf\")\n"
    ]
   },
   {
@@ -85,9 +78,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
