Finsihed Park-Miller / lcg / Lehmer

--- a/WorkSpace/ProjectCore/ProjectCore.ipynb
+++ b/WorkSpace/ProjectCore/ProjectCore.ipynb
@@ -36,15 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.3721635401447e+17\n",
-      "--- 8.630752563476562e-05 seconds ---\n",
+      "6.372179079074738e+17\n",
+      "--- 0.0002071857452392578 seconds ---\n",
       "asdf\n"
      ]
     }
@@ -59,7 +59,7 @@
     "\n",
     "print(t)\n",
     "start_time = time.time()\n",
-    "#ls = Mersenne_Twister(429496796,10000)\n",
+    "#ls = Park_Miller(12342,10000)\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
     "\n",
     "#print(str(ls))\n",
